# Page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: CI.yml
page_analyzer/: app.py  data_handlers.py  database_handlers.py  db.py  parser.py  translator.py  validator.py
page_analyzer/templates/: index.html  main.html  show.html
page_analyzer/templates/components/: messages.html
page_analyzer/templates/errors/: error.html
page_analyzer/templates/includes/: header.html  messages.html
page_analyzer/templates/layouts/: layout.html
tests/: test_app.py
