[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["Evgenij Chajka <chay67ka26@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Database"
]
repository = "https://github.com/EvgenyCh97/Page-analyzer"

[tool.poetry.dependencies]
python = "^3.8.10"
flask = "^3.0.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
googletrans = "3.1.0a0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-playwright = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
